fix avator image set from firebase account